--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,10 @@ default: &default
   # # http://guides.rubyonrails.org/configuring.html#database-pooling
   # pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   adapter: postgresql
-  username: postgres
-  password: lidu1234
-  host: localhost
-  port: 5432
+  # username: postgres
+  # password: lidu1234
+  # host: localhost
+  # port: 5432
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
